--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -13,7 +13,7 @@ on:
         - all
 jobs:
   run-tests:
-    runs-on: ubuntu_latest
+    runs-on: ubuntu-latest
     name: Tests
     steps:
       - name: Coppy source code
