--- a/.github/workflows/run_tests.yml
+++ b/.github/workflows/run_tests.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     name: Tests
     steps:
-      - name: Coppy source code
+      - name: Copy source code
         uses: actions/checkout@v4
       - name: Set up Python env
         uses: actions/setup-python@v5
